[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "z3-solver"
description = "an efficient SMT solver library"
readme = "README.txt"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "The Z3 Theorem Prover Project"}
]
maintainers = [
    {name = "Audrey Dutcher and Nikolaj Bjorner", email = "audrey@rhelmot.io"}
]
keywords = ["z3", "smt", "sat", "prover", "theorem"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "importlib-resources; python_version < '3.9'"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Z3Prover/z3"
"Bug Reports" = "https://github.com/Z3Prover/z3/issues"
Repository = "https://github.com/Z3Prover/z3"
Documentation = "http://z3prover.github.io/api/html/z3.html"

[tool.setuptools]
packages = ["z3"]
include-package-data = true

[tool.setuptools.package-data]
z3 = ["lib/*", "include/*.h", "include/c++/*.h"]

[tool.setuptools.data-files]
bin = ["bin/*"]

[tool.setuptools.dynamic]
version = {attr = "z3_version.__version__"}
